100-Prozent-Ausspielungen/Sprint-AB-08.3-Warenkorb-Ersparnisse/variation-01/style.less
/* IMPORT VAR LESS FILE */
// @import "../global/vars.less";

/* IMPORT GLOBAL LESS FILES */
@import "../global/global.less";

/* DEFINE VARIATION CSS */

.kk_inner_bottom_checkout_wrapper {
    > :last-child {
        > :first-child {
            flex: 0 0 100%;
            max-width: 100%;
        }

    }
}

.kk_border_container {
    margin-bottom: 30px 
}

